@@ -108,6 +108,10 @@ preferences via Manage&rarr;Options.</td>
 <td align="center" width="100">n/a</td>
 <td>Selecting hexadecimal passwords as the database policy no longer causes validation to fail.</td>
 </tr>
+<tr>
+<td align="center" width="100">n/a</td>
+<td>Toolbar now updated to reflect R/W or R-O mode when user dynamically changes mode.</td>
+</tr>
 </tbody>
 </table>
 <br>
